Starting the Sonar Warning Cleanup in Test Classes 7/N